Rust wrapper: merge wolfssl-sys crate into wolfssl crate

--- a/wrapper/rust/wolfssl/Cargo.toml
+++ b/wrapper/rust/wolfssl/Cargo.toml
@@ -3,5 +3,15 @@ name = "wolfssl"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
-wolfssl-sys = { path = "../wolfssl-sys" }
+[features]
+std = []
+
+[build-dependencies]
+bindgen = "0.72.1"
+
+[profile.release]
+strip = true
+opt-level = "s"
+lto = true
+codegen-units = 1
+panic = "abort"
