--- a/.github/workflows/baremetal.yml
+++ b/.github/workflows/baremetal.yml
@@ -20,7 +20,6 @@ jobs:
       fail-fast: false
       matrix:
         config: [
-          '--enable-baremetal',
           '--enable-baremetal --enable-cryptonly'
         ]
     steps:
@@ -33,61 +32,19 @@ jobs:
         run: ./autogen.sh
       
       - name: configure
-        run: CPPFLAGS="-DWOLFSSL_USER_IO" ./configure ${{ matrix.config }} --disable-examples --enable-cryptocb
+        run: CPPFLAGS="-DWOLFSSL_USER_IO" ./configure ${{ matrix.config }} --disable-examples --disable-rng
       
       - name: build
         run: make -j$(nproc)
       
-      - name: Verify macro definitions
-        run: |
-          cat > test_baremetal_defines.c <<'EOF'
-          #include <wolfssl/options.h>
-          #include <wolfssl/wolfcrypt/settings.h>
-          #include <stdio.h>
-          
-          int main() {
-              int errors = 0;
-              
-              #ifdef WOLFSSL_BAREMETAL
-                  printf("✓ WOLFSSL_BAREMETAL is defined\n");
-              #else
-                  printf("✗ ERROR: WOLFSSL_BAREMETAL should be defined\n");
-                  errors++;
-              #endif
-              
-              #ifdef WOLFCRYPT_ONLY
-                  printf("✓ WOLFCRYPT_ONLY is defined\n");
-                  #ifdef NO_ASN_TIME
-                      printf("✓ NO_ASN_TIME is defined (expected with WOLFCRYPT_ONLY)\n");
-                  #else
-                      printf("✗ ERROR: NO_ASN_TIME should be defined when WOLFCRYPT_ONLY is set\n");
-                      errors++;
-                  #endif
-              #else
-                  printf("✓ WOLFCRYPT_ONLY is NOT defined\n");
-                  #ifdef NO_ASN_TIME
-                      printf("✗ ERROR: NO_ASN_TIME should NOT be defined without WOLFCRYPT_ONLY\n");
-                      errors++;
-                  #else
-                      printf("✓ NO_ASN_TIME is NOT defined (expected without WOLFCRYPT_ONLY)\n");
-                  #endif
-              #endif
-              
-              return errors;
-          }
-          EOF
-          gcc -I. test_baremetal_defines.c -o test_baremetal_defines
-          ./test_baremetal_defines
+      - name: Run tests
+        run: ./wolfcrypt/test/testwolfcrypt
 
   baremetal_cmake:
     name: Bare-metal build (CMake)
     if: github.repository_owner == 'wolfssl'
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    strategy:
-      fail-fast: false
-      matrix:
-        cryptonly: [false, true]
     steps:
       - uses: actions/checkout@v4
       
@@ -97,55 +54,11 @@ jobs:
       - name: Configure CMake
         run: |
           mkdir build && cd build
-          if [ "${{ matrix.cryptonly }}" = "true" ]; then
-            cmake -DWOLFSSL_BAREMETAL=yes -DWOLFSSL_CRYPTONLY=yes -DWOLFSSL_EXAMPLES=no -DWOLFSSL_CRYPTOCB=yes -DCMAKE_C_FLAGS="-DWOLFSSL_USER_IO -DWOLFCRYPT_ONLY" ..
-          else
-            cmake -DWOLFSSL_BAREMETAL=yes -DWOLFSSL_EXAMPLES=no -DWOLFSSL_CRYPTOCB=yes -DCMAKE_C_FLAGS="-DWOLFSSL_USER_IO" ..
-          fi
+          cmake -DWOLFSSL_BAREMETAL=yes -DWOLFSSL_EXAMPLES=no -DWOLFSSL_RNG=no -DCMAKE_C_FLAGS="-DWOLFSSL_USER_IO -DWOLFCRYPT_ONLY" ..
       
       - name: Build
         run: cd build && cmake --build . -j$(nproc)
       
-      - name: Verify macro definitions
-        run: |
-          cd build
-          cat > test_baremetal_defines.c <<'EOF'
-          #include <wolfssl/options.h>
-          #include <wolfssl/wolfcrypt/settings.h>
-          #include <stdio.h>
-          
-          int main() {
-              int errors = 0;
-              
-              #ifdef WOLFSSL_BAREMETAL
-                  printf("✓ WOLFSSL_BAREMETAL is defined\n");
-              #else
-                  printf("✗ ERROR: WOLFSSL_BAREMETAL should be defined\n");
-                  errors++;
-              #endif
-              
-              #ifdef WOLFCRYPT_ONLY
-                  printf("✓ WOLFCRYPT_ONLY is defined\n");
-                  #ifdef NO_ASN_TIME
-                      printf("✓ NO_ASN_TIME is defined (expected with WOLFCRYPT_ONLY)\n");
-                  #else
-                      printf("✗ ERROR: NO_ASN_TIME should be defined when WOLFCRYPT_ONLY is set\n");
-                      errors++;
-                  #endif
-              #else
-                  printf("✓ WOLFCRYPT_ONLY is NOT defined\n");
-                  #ifdef NO_ASN_TIME
-                      printf("✗ ERROR: NO_ASN_TIME should NOT be defined without WOLFCRYPT_ONLY\n");
-                      errors++;
-                  #else
-                      printf("✓ NO_ASN_TIME is NOT defined (expected without WOLFCRYPT_ONLY)\n");
-                  #endif
-              #endif
-              
-              return errors;
-          }
-          EOF
-          # Key: -I. comes BEFORE -I.. so build/wolfssl/options.h is found first
-          gcc -I. -I.. test_baremetal_defines.c -o test_baremetal_defines
-          ./test_baremetal_defines
+      - name: Run tests
+        run: cd build && ./wolfcrypt/test/testwolfcrypt
 
