--- a/wrapper/Ada/alire.toml
+++ b/wrapper/Ada/alire.toml
@@ -12,3 +12,6 @@ tags = ["ssl", "tls", "embedded", "spark"]
 
 [configuration.variables]
 STATIC_PSK = {type = "Boolean", default = false}
+
+[[depends-on]]
+gnatprove = "^13.2.1"
