--- a/wrapper/Ada/include.am
+++ b/wrapper/Ada/include.am
@@ -3,15 +3,45 @@
 # All paths should be given relative to the root
 
 EXTRA_DIST+= wrapper/Ada/README.md
+EXTRA_DIST+= wrapper/Ada/ada_binding.c
+EXTRA_DIST+= wrapper/Ada/alire.toml
 EXTRA_DIST+= wrapper/Ada/default.gpr
 EXTRA_DIST+= wrapper/Ada/restricted.adc
-EXTRA_DIST+= wrapper/Ada/ada_binding.c
-EXTRA_DIST+= wrapper/Ada/tls_client_main.adb
-EXTRA_DIST+= wrapper/Ada/tls_client.adb
-EXTRA_DIST+= wrapper/Ada/tls_client.ads
-EXTRA_DIST+= wrapper/Ada/tls_server_main.adb
-EXTRA_DIST+= wrapper/Ada/tls_server.adb
-EXTRA_DIST+= wrapper/Ada/tls_server.ads
 EXTRA_DIST+= wrapper/Ada/user_settings.h
+EXTRA_DIST+= wrapper/Ada/wolfssl-full_runtime.adb
+EXTRA_DIST+= wrapper/Ada/wolfssl-full_runtime.ads
 EXTRA_DIST+= wrapper/Ada/wolfssl.adb
 EXTRA_DIST+= wrapper/Ada/wolfssl.ads
+EXTRA_DIST+= wrapper/Ada/wolfssl.gpr
+EXTRA_DIST+= wrapper/Ada/examples/.gitignore
+EXTRA_DIST+= wrapper/Ada/examples/alire.toml
+EXTRA_DIST+= wrapper/Ada/examples/examples.gpr
+EXTRA_DIST+= wrapper/Ada/examples/src/aes_verify_main.adb
+EXTRA_DIST+= wrapper/Ada/examples/src/rsa_verify_main.adb
+EXTRA_DIST+= wrapper/Ada/examples/src/sha256_main.adb
+EXTRA_DIST+= wrapper/Ada/examples/src/spark_sockets.adb
+EXTRA_DIST+= wrapper/Ada/examples/src/spark_sockets.ads
+EXTRA_DIST+= wrapper/Ada/examples/src/spark_terminal.adb
+EXTRA_DIST+= wrapper/Ada/examples/src/spark_terminal.ads
+EXTRA_DIST+= wrapper/Ada/examples/src/tls_client.adb
+EXTRA_DIST+= wrapper/Ada/examples/src/tls_client.ads
+EXTRA_DIST+= wrapper/Ada/examples/src/tls_client_main.adb
+EXTRA_DIST+= wrapper/Ada/examples/src/tls_server.adb
+EXTRA_DIST+= wrapper/Ada/examples/src/tls_server.ads
+EXTRA_DIST+= wrapper/Ada/examples/src/tls_server_main.adb
+EXTRA_DIST+= wrapper/Ada/tests/.gitignore
+EXTRA_DIST+= wrapper/Ada/tests/README.md
+EXTRA_DIST+= wrapper/Ada/tests/alire.toml
+EXTRA_DIST+= wrapper/Ada/tests/src/aes_bindings_tests.adb
+EXTRA_DIST+= wrapper/Ada/tests/src/aes_bindings_tests.ads
+EXTRA_DIST+= wrapper/Ada/tests/src/rsa_verify_bindings_tests.adb
+EXTRA_DIST+= wrapper/Ada/tests/src/rsa_verify_bindings_tests.ads
+EXTRA_DIST+= wrapper/Ada/tests/src/sha256_bindings_tests.adb
+EXTRA_DIST+= wrapper/Ada/tests/src/sha256_bindings_tests.ads
+EXTRA_DIST+= wrapper/Ada/tests/src/support/test_support.adb
+EXTRA_DIST+= wrapper/Ada/tests/src/support/test_support.ads
+EXTRA_DIST+= wrapper/Ada/tests/src/support/tests_root_suite.adb
+EXTRA_DIST+= wrapper/Ada/tests/src/support/tests_root_suite.ads
+EXTRA_DIST+= wrapper/Ada/tests/src/tests.adb
+EXTRA_DIST+= wrapper/Ada/tests/tests.gpr
+EXTRA_DIST+= wrapper/Ada/tests/valgrind.supp
