--- a/.github/workflows/rust-wrapper.yml
+++ b/.github/workflows/rust-wrapper.yml
@@ -36,43 +36,38 @@ jobs:
         config: [
           # Add new configs here
           '',
-          '--enable-all --enable-asn=template',
-          '--enable-all --enable-asn=original',
-          '--enable-all --enable-asn=template CPPFLAGS=-DWOLFSSL_OLD_OID_SUM',
-          '--enable-all --enable-asn=original CPPFLAGS=-DWOLFSSL_OLD_OID_SUM',
-          '--enable-harden-tls',
-          '--enable-tls13 --enable-session-ticket --enable-dtls --enable-dtls13
-             --enable-opensslextra --enable-sessioncerts
-             CPPFLAGS=''-DWOLFSSL_DTLS_NO_HVR_ON_RESUME -DHAVE_EXT_CACHE
-             -DWOLFSSL_TICKET_HAVE_ID -DHAVE_EX_DATA -DSESSION_CACHE_DYNAMIC_MEM'' ',
-          '--enable-all --enable-secure-renegotiation',
-          '--enable-all --enable-haproxy --enable-quic',
-          '--enable-dtls --enable-dtls13 --enable-earlydata
-             --enable-session-ticket --enable-psk
-             CPPFLAGS=''-DWOLFSSL_DTLS13_NO_HRR_ON_RESUME'' ',
-          '--enable-experimental --enable-kyber --enable-dtls --enable-dtls13
-             --enable-dtls-frag-ch',
-          '--enable-all --enable-dtls13 --enable-dtls-frag-ch',
-          '--enable-dtls --enable-dtls13 --enable-dtls-frag-ch
-           --enable-dtls-mtu',
-          '--enable-dtls --enable-dtlscid --enable-dtls13 --enable-secure-renegotiation
-            --enable-psk --enable-aesccm --enable-nullcipher
-            CPPFLAGS=-DWOLFSSL_STATIC_RSA',
-          '--enable-ascon --enable-experimental',
-          '--enable-ascon CPPFLAGS=-DWOLFSSL_ASCON_UNROLL --enable-experimental',
-          '--enable-sniffer --enable-curve25519 --enable-curve448 --enable-enckeys
-            CPPFLAGS=-DWOLFSSL_DH_EXTRA',
-          '--enable-dtls --enable-dtls13 --enable-dtls-frag-ch
-            --enable-dtls-mtu CPPFLAGS=-DWOLFSSL_DTLS_RECORDS_CAN_SPAN_DATAGRAMS',
-          '--enable-opensslextra CPPFLAGS=''-DWOLFSSL_NO_CA_NAMES'' ',
-          '--enable-opensslextra=x509small',
-          'CPPFLAGS=''-DWOLFSSL_EXTRA'' ',
-          '--enable-lms=small,verify-only --enable-xmss=small,verify-only',
-          '--disable-sys-ca-certs',
-          '--enable-all CPPFLAGS=-DWOLFSSL_DEBUG_CERTS ',
-          '--enable-coding=no',
-          '--enable-dtls --enable-dtls13 --enable-ocspstapling --enable-ocspstapling2
-           --enable-cert-setup-cb --enable-sessioncerts',
-          '--disable-sni --disable-ecc --disable-tls13 --disable-secure-renegotiation-info',
-          'CPPFLAGS=-DWOLFSSL_BLIND_PRIVATE_KEY',
+          '--enable-all',
+          '--enable-cryptonly --disable-examples',
+          '--enable-cryptonly --disable-examples --disable-aes --disable-aesgcm',
+          '--enable-cryptonly --disable-examples --disable-aescbc',
+          '--enable-cryptonly --disable-examples --disable-aeseax',
+          '--enable-cryptonly --disable-examples --disable-aesecb',
+          '--enable-cryptonly --disable-examples --disable-aesccm',
+          '--enable-cryptonly --disable-examples --disable-aescfb',
+          '--enable-cryptonly --disable-examples --disable-aesctr',
+          '--enable-cryptonly --disable-examples --disable-aescts',
+          '--enable-cryptonly --disable-examples --disable-aesgcm',
+          '--enable-cryptonly --disable-examples --disable-aesgcm-stream',
+          '--enable-cryptonly --disable-examples --disable-aesofb',
+          '--enable-cryptonly --disable-examples --disable-aesxts',
+          '--enable-cryptonly --disable-examples --disable-cmac',
+          '--enable-cryptonly --disable-examples --disable-dh',
+          '--enable-cryptonly --disable-examples --disable-ecc',
+          '--enable-cryptonly --disable-examples --disable-ed25519',
+          '--enable-cryptonly --disable-examples --disable-ed25519-stream',
+          '--enable-cryptonly --disable-examples --disable-ed448',
+          '--enable-cryptonly --disable-examples --disable-ed448-stream',
+          '--enable-cryptonly --disable-examples --disable-hkdf',
+          '--enable-cryptonly --disable-examples --disable-hmac',
+          '--enable-cryptonly --disable-examples --disable-rng',
+          '--enable-cryptonly --disable-examples --disable-rsa',
+          '--enable-cryptonly --disable-examples --disable-rsapss',
+          '--enable-cryptonly --disable-examples --disable-sha224',
+          '--enable-cryptonly --disable-examples --disable-sha3',
+          '--enable-cryptonly --disable-examples --disable-sha384',
+          '--enable-cryptonly --disable-examples --disable-sha512',
+          '--enable-cryptonly --disable-examples --disable-shake128',
+          '--enable-cryptonly --disable-examples --disable-shake256',
+          '--enable-cryptonly --disable-examples --disable-srtp-kdf',
+          '--enable-cryptonly --disable-examples --disable-x963kdf',
         ]
