Added --enable-certgencache to os-check

--- a/.github/workflows/os-check.yml
+++ b/.github/workflows/os-check.yml
@@ -65,6 +65,7 @@ jobs:
            --enable-cert-setup-cb --enable-sessioncerts',
           '--disable-sni --disable-ecc --disable-tls13 --disable-secure-renegotiation-info',
           'CPPFLAGS=-DWOLFSSL_BLIND_PRIVATE_KEY',
+          '--enable-all --enable-certgencache',
         ]
     name: make check
     if: github.repository_owner == 'wolfssl'
