--- a/tests/api/include.am
+++ b/tests/api/include.am
@@ -78,6 +78,13 @@ tests_unit_test_SOURCES += tests/api/test_ossl_ec.c
 tests_unit_test_SOURCES += tests/api/test_ossl_ecx.c
 tests_unit_test_SOURCES += tests/api/test_ossl_dsa.c
 tests_unit_test_SOURCES += tests/api/test_ossl_sk.c
+# OpenSSL X509
+tests_unit_test_SOURCES += tests/api/test_ossl_x509.c
+tests_unit_test_SOURCES += tests/api/test_ossl_x509_ext.c
+tests_unit_test_SOURCES += tests/api/test_ossl_x509_name.c
+tests_unit_test_SOURCES += tests/api/test_ossl_x509_pk.c
+# SSL PEM
+tests_unit_test_SOURCES += tests/api/test_ossl_pem.c
 # TLS 1.3 specific
 tests_unit_test_SOURCES += tests/api/test_tls13.c
 endif
@@ -147,5 +154,10 @@ EXTRA_DIST += tests/api/test_ossl_ec.h
 EXTRA_DIST += tests/api/test_ossl_ecx.h
 EXTRA_DIST += tests/api/test_ossl_dsa.h
 EXTRA_DIST += tests/api/test_ossl_sk.h
+EXTRA_DIST += tests/api/test_ossl_x509.h
+EXTRA_DIST += tests/api/test_ossl_x509_ext.h
+EXTRA_DIST += tests/api/test_ossl_x509_name.h
+EXTRA_DIST += tests/api/test_ossl_x509_pk.h
+EXTRA_DIST += tests/api/test_ossl_pem.h
 EXTRA_DIST += tests/api/test_tls13.h
 
