--- a/wrapper/rust/wolfssl/Cargo.toml
+++ b/wrapper/rust/wolfssl/Cargo.toml
@@ -2,6 +2,12 @@
 name = "wolfssl"
 version = "0.1.0"
 edition = "2024"
+description = "Rust wrapper for wolfssl C library"
+license = "GPL-3.0"
+repository = "https://github.com/wolfSSL/wolfssl"
+documentation = "https://github.com/wolfSSL/wolfssl/tree/master/wrapper/rust"
+keywords = ["wolfssl", "fips", "security", "encryption", "cryptography"]
+categories = ["cryptography", "security", "api-bindings"]
 
 [features]
 std = []
